src/scss/Shared.scss
@import 'all-import';
@mixin med ($max-w , $min-w){
    @media screen and (max-width: $max-w) and (min-width: $min-w){
        @content;
    }
}
@mixin medx ($max-w) {
@media screen and (max-width: $max-w){
    @content;
}
}
@function headings($from:1, $to:6) {
@if $from == $to {
    @return 'h#{$from}';
} @else {
    @return 'h#{$from},' + headings($from+1, $to);
}
}
#{headings(1,6)},p {
color: $text-primary;
    text-align: right;
    &:hover{
        color: $text-primary;
    }
letter-spacing: -.5px;
line-height: 30px;
}
a{
color: $text-primary;
&:hover{
    color: $text-primary;
}
}
.h-wrapper{
    background-color: white;
    .container-fluid{
        display: flex;
        align-items: center;
        justify-content: space-around;
        .login-about{
            background-image: linear-gradient(yellow,white);
            padding: 1rem;
            .dropdown-menu{
                border: 0;
                border-top: 4px solid $primary;
                top: 14px !important;
                left: -17px !important;
                border-radius: 0;
                &::before{
                    content: "";
                    display: inline-block;
                    position: absolute;
                    bottom: 8.8rem;
                    left: 1rem;
                    border-top: 0;
                    border-right: 0.3em solid transparent;
                    border-bottom: .3rem solid $primary;
                    border-left: 0.3em solid transparent;
                }
                .login-profile{
                    padding: 0 1rem;
                    .btn{
                        width: 10rem;
                        height: 1.8rem;
                        padding: 0;
                        margin: .5rem 0;
                        &:hover{
                            color: white !important;
                        }
                    }
                    h6{
                        img{
                            margin-left:10px;
                        }
                        &:nth-child(2){
                            a{
                                color: $primary;
                            }
                        }
                    }
                }
            }
            .d-flex{
                img{
                    margin-left: 5px;
                    width: 35px;
                    height: 35px;
                }
            }
            .dropdown-icon{
                transform: rotateZ(45deg);
                display: inline-block;
                border-right: 1px solid #000;
                border-bottom: 1px solid #000;
                margin-right: 5px;
                width: 8px;
                height: 8px;
            }
        }
        .nav-header{
            align-items: center;
            display: flex;
        }
        img{
            margin-left: 1.8rem;
        }
        .sm-nav-header-icon{
            display: none;
        }
    }
}
@include medx(838px){
    .h-wrapper{
        .container-fluid{
            .sm-nav-header-icon{
                display: block;
            }
            .nav-header{
                position: fixed;
                right: 0;
                left: 0;
                top:10rem;
                display: none;
                span{
                    display: none;
                }                
                a,li{
                    text-align:center;
                }
            }
        }
    }
}

